--- a/steamcmd_servers/arma/arma3/egg-arma3-config/server.cfg
+++ b/steamcmd_servers/arma/arma3/egg-arma3-config/server.cfg
@@ -14,13 +14,13 @@
 // GENERAL SETTINGS
 
 // Hostname for server.
-hostname = "Arma 3 Server";
+hostname = "Arma 3 Server | Hosted by AsoyHost";
 
 // Server password - for private servers.
 //password = "arma3pass";
 
 // Admin Password
-//passwordAdmin = "ADMINPASSWORD";
+//passwordAdmin = "MotDePasseAdminChangerMoi!!";
 
 // Auto-admin
 admins[] = {"<UID>"};
