--- a/gta/fivem/server.cfg
+++ b/gta/fivem/server.cfg
@@ -4,7 +4,7 @@ endpoint_add_tcp "0.0.0.0:30120"
 endpoint_add_udp "0.0.0.0:30120"
 
 # Set your server's hostname
-sv_hostname "New FiveM Server with Pterodactyl"
+sv_hostname "SERVEUR HEBERGER PAR ASOYHOST.COM"
 
 # Server player slot limit (must be between 1 and 32, unless using OneSync)
 sv_maxclients 32
